<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/img"
            app:srcCompat="@drawable/alien" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_titulo"
                android:maxLines="1"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center_horizontal"
                android:textSize="25sp"
                android:singleLine="true"
                android:layout_marginRight="10dp" />

            <TextView
                android:id="@+id/sinopsis"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:hint="@string/prompt_sinopsis"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:maxLines="5"
                android:singleLine="false"
                android:layout_gravity="center_horizontal"
                android:textSize="15sp"
                android:layout_marginRight="10dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/genero2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/prompt_generod"
            android:maxLines="1"
            android:gravity="end"
            android:layout_marginEnd="10dp"
            android:singleLine="true"
            android:textSize="25sp"
            android:layout_marginRight="10dp" />

        <TextView
            android:id="@+id/genero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/prompt_genero"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/idiomaO2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/prompt_idiomaOd"
            android:gravity="end"
            android:layout_marginEnd="10dp"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="25sp"
            android:layout_marginRight="10dp" />

        <TextView
            android:id="@+id/idiomaO"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/prompt_idiomaO"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fechaE2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/prompt_fechaEd"
            android:gravity="end"
            android:layout_marginEnd="10dp"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="25sp"
            android:layout_marginRight="10dp" />

        <TextView
            android:id="@+id/fechaE"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/prompt_fechaE"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/precio2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/prompt_preciod"
            android:gravity="end"
            android:layout_marginEnd="10dp"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="25sp"
            android:layout_marginRight="10dp" />

        <TextView
            android:id="@+id/precio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/prompt_precio"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/saldo2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="end"
            android:hint="@string/tusaldo"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/saldo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/prompt_precio"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/compra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="Comprar"
            android:text="@string/action_compra"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/critica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_critica"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <TextView
        android:id="@+id/critica_t"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="@string/prompt_critica"
        android:textSize="29sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>