<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:baselineAligned="false"
    android:orientation="vertical">

    <Button
        android:id="@+id/regresa"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:drawableLeft="@drawable/ic_atras"
        android:drawableStart="@drawable/ic_atras"
        android:onClick="VolverTipo"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:hint="@string/prompt_nombre"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:hint="@string/prompt_correod"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="25sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fechaN2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Cumpleaños:"
            android:gravity="end"
            android:layout_marginEnd="10dp"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="25sp"
            android:layout_marginRight="10dp" />

        <TextView
            android:id="@+id/fechaN"
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/prompt_fechad"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/saldo2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/prompt_saldod"
            android:gravity="end"
            android:layout_marginEnd="10dp"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="25sp"
            android:layout_marginRight="10dp" />

        <TextView
            android:id="@+id/saldo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/prompt_saldo"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/misPeliculas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="misPeliculas"
            android:text="@string/prompt_misPeliculas"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/misCapitulos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="misCapitulos"
            android:text="@string/prompt_misCapitulos"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>